# Chess

./: .gitignore  CMakeLists.txt  README.md
res/: StyleSheet.css  resource.qrc
src/: bishop.cpp  bishop.h  chessboard.cpp  chessboard.h  chessbox.cpp  chessbox.h  chessitem.cpp  chessitem.h  game.cpp  game.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  mainwindow.cpp  mainwindow.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h  state.cpp  state.h
